# graph-context-mcp

./: .dockerignore  .gitignore  CLAUDE.md  README.md  channels.toml  graph-context-mcp-proposal.md  pyproject.toml  spaces.toml
.claude/: settings.json  settings.local.json
.devcontainer/: Dockerfile  claude_desktop_config.example.json  devcontainer.json  docker-compose.yml  init-firewall.sh  readme.txt
.devcontainer/anytype/: Dockerfile
.devcontainer/secrets/: README.md
.github/workflows/: ci.yml
docs/: TESTING.md  WORK_PACKAGES.md
docs/adr/: 001-anytype-as-storage-and-human-surface.md  002-derived-graphindex-as-only-traversal-engine.md  003-edges-as-relation-properties.md  004-summary-staleness-rule-in-nodewriter.md  005-filters-prune-subtrees-in-traversal.md  006-space-reflecting-open-schema.md  007-orchestrator-second-interface-adapter.md  008-provenance-as-harness-responsibility.md  009-single-writer-delta-queue.md  010-descriptions-in-the-body.md  011-summary-in-builtin-description.md  012-native-property-reflection.md  013-connections-footer.md  014-semantic-search-as-derived-projection.md  015-configurable-activity-modes.md  016-graph-aware-ranking.md  017-channel-bound-spaces.md  018-client-side-query-engine.md  019-anytype-chat-transport-and-headless-sidecar.md  020-curated-cross-turn-context.md  021-per-chat-keyed-sessions.md  022-apply-type-templates-on-create.md  023-native-only-story-fields.md  024-eval-harness.md  025-inspection-server.md  026-reflect-space-members-as-nodes.md  027-scheduled-events.md  028-native-properties-everywhere.md  029-live-turn-activity-streaming.md  030-mode-gated-web-search.md  031-chat-auto-titling-and-default-mode.md  032-chat-files-to-and-from-the-model.md  033-per-mode-model-selection.md  034-space-context-default-mode.md  035-in-space-only-activity-modes.md  036-chat-text-formatting-marks.md  037-mode-level-driver-options.md  038-turn-trace-on-the-intent-node.md  039-reactive-rule-engine.md  040-sandboxed-script-action.md  (+1 more)
docs/graph-context-mcp-WP23/: README.md  pyproject.toml
docs/graph-context-mcp-WP23/docs/: HANDOFF_WP2_WP3.md  WORK_PACKAGES.md
docs/graph-context-mcp-WP23/scripts/: demo_wp1.py  demo_wp2_tools.py
docs/graph-context-mcp-WP23/src/graph_context/: errors.py
docs/graph-context-mcp-WP23/src/graph_context/application/: node_reader.py  node_writer.py  prose_recorder.py  session_persister.py
docs/graph-context-mcp-WP23/src/graph_context/domain/: models.py  pathfinding.py  schema.py  session.py
docs/graph-context-mcp-WP23/src/graph_context/infrastructure/anytype/: client.py  config.py  mapping.py  mock_server.py  repository.py  session_repository.py  sync.py
docs/graph-context-mcp-WP23/src/graph_context/infrastructure/memory/: fake_repository.py
docs/graph-context-mcp-WP23/src/graph_context/interface/: presenters.py  server.py  tools.py
docs/graph-context-mcp-WP23/src/graph_context/ports/: graph_repository.py  session_store.py
docs/graph-context-mcp-WP23/tests/anytype/: test_client.py
docs/graph-context-mcp-WP23/tests/application/: test_explorer.py  test_node_writer.py
docs/graph-context-mcp-WP23/tests/unit/: test_traversal.py
docs/spikes/: grpc-event-backbone.md  templates-body-collision.md
evals/: __init__.py  __main__.py  compare.py  dataset.py  graders.py  judge.py  recording.py  report.py  runner.py  seeding.py
evals/cases/: context_curation.toml  lookups.toml  mode_boundary.toml  mode_management.toml  multi_turn.toml  out_of_band.toml  smoke.toml  task_creation.toml  world_building.toml
scripts/: demo_claude_driver.py  demo_workspace_profile.py  demo_wp1.py  demo_wp11_search.py  demo_wp12_assistant.py  demo_wp2_tools.py  demo_wp6_orchestrator.py  demo_wp7_provenance.py  demo_wp9_body_descriptions.py  migrate_descriptions_to_body.py  migrate_summary_to_description.py  serve_turn_log.py  spike_chat_marks.py  spike_chat_rename.py  spike_s10_chat.py  spike_s9_lists.py  spike_template_props.py  spike_templates.py  spike_type_update.py
src/graph_context/: composition.py  errors.py
tests/: conftest.py
tests/anytype/: conftest.py  test_body.py  test_chat_client.py  test_client.py  test_fields.py  test_footer.py  test_marks.py  test_migration_script.py  test_registry.py  test_repository.py  test_rule_engine_adapter.py  test_schema_bootstrap.py  test_summary_migration_script.py  test_sync.py  test_timeline.py  test_view_catalog.py
tests/application/: test_capture_recorder.py  test_explorer.py  test_intent_recorder.py  test_mutation_journal.py  test_node_reader.py  test_node_writer.py  test_prose_recorder.py  test_rule_engine.py  test_scheduler.py  test_schema_proposals.py  test_session_persister.py  test_session_registry.py
tests/contract/: test_graph_repository_contract.py  test_mode_seeder_contract.py  test_mode_store_contract.py  test_session_store_contract.py  test_space_context_store_contract.py
tests/e2e/: conftest.py  test_live_anthropic_driver.py  test_live_chat.py  test_live_claude_driver.py  test_live_contract.py  test_live_mode_seeding.py  test_live_mode_store.py  test_live_rules.py  test_live_semantic.py  test_live_sessions.py  test_live_space_context.py  test_live_sync.py  test_live_views.py
tests/evals/: test_harness_smoke.py  test_judge_and_compare.py
tests/interface/: conftest.py  test_context_block.py  test_mode_config.py  test_presenters_views.py  test_profiles.py  test_server_wrappers.py  test_tools.py
tests/orchestrator/: mode_fixtures.py  test_anthropic_driver.py  test_anytype_chat_bot_wiring.py  test_anytype_chat_transport.py  test_bootstrap_driver.py  test_channels.py  test_claude_driver.py  test_discord_transport.py  test_driver_common.py  test_eval_index.py  test_inspect_server.py  test_modes_and_pipeline.py  test_process_trace.py  test_seeded_runtime.py  test_serve.py  test_spaces.py  test_turn_activity.py  test_turn_log.py  test_turn_log_server.py
tests/sandbox/: test_subprocess_runner.py
tests/semantic/: ranking_eval.toml  test_index_contract.py  test_local_embedder.py  test_projector.py  test_ranker.py  test_ranking_eval.py
(+120 files in other folders)
