[project]
name = "graph-context-mcp"
version = "0.1.0"
description = "MCP server exposing a knowledge graph (story worlds, work knowledge bases) backed by Anytype"
requires-python = ">=3.11"
dependencies = [
    # domain stays dependency-free; these are infrastructure/interface-only
    "httpx>=0.27",
    "mcp>=1.2",
    "sentence-transformers>=3",   # ADR 014: local embedder, model baked into the image
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.4", "mypy>=1.10", "import-linter>=2"]
# ADR 007: the agentic pipeline's framework, quarantined to orchestrator/.
# Installable once the devcontainer image carries it (egress firewall).
# claude-agent-sdk is the driver's model access: it runs the (bundled)
# Claude Code CLI, which authenticates with the user's Claude SUBSCRIPTION
# (~/.claude OAuth login or CLAUDE_CODE_OAUTH_TOKEN) — the sanctioned
# per-plan path; the raw `anthropic` SDK would bill API credits instead.
orchestrator = ["langgraph>=0.2", "claude-agent-sdk>=0.2"]
# WP8 chat-bot transports. Discord's Gateway is outbound-only (websocket), so
# the bot runs inside the firewalled devcontainer; egress rules live in
# init-firewall.sh (discord.com, gateway.discord.gg + the 162.159.128.0/20
# anycast block that resume gateways resolve into).
bot = ["discord.py>=2.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graph_context"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"

# CI installs only [dev]; the [orchestrator] extra (claude-agent-sdk) is
# devcontainer-image-only (egress firewall). Typed normally where installed.
[[tool.mypy.overrides]]
module = "claude_agent_sdk.*"
ignore_missing_imports = true

# Same story for the [bot] extra (discord.py).
[[tool.mypy.overrides]]
module = "discord.*"
ignore_missing_imports = true

# The dependency rule (README "Architecture in one paragraph"), enforced.
[tool.importlinter]
root_package = "graph_context"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Layers: interface -> application -> domain"
type = "layers"
layers = [
    "graph_context.interface",
    "graph_context.application",
    "graph_context.domain",
]

[[tool.importlinter.contracts]]
name = "Domain, ports and application never import infrastructure"
type = "forbidden"
source_modules = [
    "graph_context.domain",
    "graph_context.ports",
    "graph_context.application",
]
forbidden_modules = ["graph_context.infrastructure"]

# Within interface, only the composition root (server.py) may import
# infrastructure; list the other modules explicitly.
[[tool.importlinter.contracts]]
name = "Only the composition root imports infrastructure"
type = "forbidden"
source_modules = [
    "graph_context.interface.tools",
    "graph_context.interface.presenters",
    "graph_context.interface.profiles",
]
forbidden_modules = ["graph_context.infrastructure"]

# ADR 007: the orchestrator is a SECOND interface adapter. It reuses the
# tool wrappers but never the MCP module, and only its composition root
# (cli.py, like interface/server.py) may import infrastructure.
[[tool.importlinter.contracts]]
name = "Orchestrator never imports the MCP composition root"
type = "forbidden"
source_modules = ["graph_context.orchestrator"]
forbidden_modules = ["graph_context.interface.server", "mcp"]

[[tool.importlinter.contracts]]
name = "Only the orchestrator's composition root imports infrastructure"
type = "forbidden"
source_modules = [
    "graph_context.orchestrator.modes",
    "graph_context.orchestrator.drivers",
    "graph_context.orchestrator.pipeline",
    "graph_context.orchestrator.discord_transport",
]
forbidden_modules = ["graph_context.infrastructure"]

# WP8: transport frameworks are quarantined like agent frameworks -- the
# per-message policy (discord_transport) is plain logic; only the
# composition-root shim touches discord.py.
[[tool.importlinter.contracts]]
name = "Only the Discord adapter imports discord.py"
type = "forbidden"
source_modules = [
    "graph_context.orchestrator.modes",
    "graph_context.orchestrator.drivers",
    "graph_context.orchestrator.pipeline",
    "graph_context.orchestrator.capture",
    "graph_context.orchestrator.claude_driver",
    "graph_context.orchestrator.bootstrap",
    "graph_context.orchestrator.discord_transport",
    "graph_context.orchestrator.cli",
]
forbidden_modules = ["discord"]

[[tool.importlinter.contracts]]
name = "Nothing imports the orchestrator"
type = "forbidden"
source_modules = [
    "graph_context.domain",
    "graph_context.ports",
    "graph_context.application",
    "graph_context.interface",
    "graph_context.infrastructure",
    "graph_context.composition",
]
forbidden_modules = ["graph_context.orchestrator"]

# ADR 007 quarantine: a framework swap must stay orchestrator-internal.
# WP8 extends the list with transport frameworks (discord).
[[tool.importlinter.contracts]]
name = "Agent and transport frameworks never leak outside the orchestrator"
type = "forbidden"
source_modules = [
    "graph_context.domain",
    "graph_context.ports",
    "graph_context.application",
    "graph_context.interface",
    "graph_context.infrastructure",
    "graph_context.composition",
]
forbidden_modules = [
    "langgraph",
    "langchain",
    "langchain_core",
    "claude_agent_sdk",
    "discord",
]
